sync-service/deploy/development-virtualservices.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: development-services
  namespace: development
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /sync
    route:
    - destination:
        host: sync-api
        port:
          number: 8080
